--- a/test.html
+++ b/test.html
@@ -1,1 +1,3 @@
-<meta http-equiv="refresh" content="0;url=https://tzuhsiang.com" />
+<html>
+    <meta http-equiv="refresh" content="0;url=https://tzuhsiang.com" />
+</html>
